--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pm2": "^3.2.2"
   },
   "devDependencies": {},
   "scripts": {
